--- a/_posts/2015-04-22-what-time.markdown
+++ b/_posts/2015-04-22-what-time.markdown
@@ -7,14 +7,14 @@ image: "img/post3.jpg"
 date:   2015-04-22 12:12:12
 ---
 
-### Dolor sit amet?
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vestibulum non mi non pulvinar. Donec tempus risus vel ex fringilla tempor. Vivamus pharetra non mauris quis fermentum. Vestibulum sed maximus elit, sit amet suscipit orci. Morbi at enim at libero dignissim egestas vel ac nisi. Etiam at lectus a arcu sodales consequat. Aliquam consequat ligula sed purus tincidunt, a ultrices nibh dapibus. Phasellus convallis ipsum nec semper ultricies. In facilisis lacus velit, sit amet lacinia velit blandit id. Nullam ut magna erat. Aliquam sit amet dapibus odio, aliquet tempus tortor. Donec in nisi massa.
+The follow up to Genesis first real album "Trespass", "Nursery Cryme" represents a giant leap forward. Phil Collins and Steve Hackett were now on board completing the classic line up.
 
-### Aliquam suscipit.
-Cras eget nisl accumsan, porta nisl in, egestas sapien. Vestibulum gravida nulla sed facilisis tempor. Suspendisse maximus nisi sit amet velit sodales fringilla. Vivamus luctus risus eget dui consectetur porttitor. Maecenas ut ultrices orci. Maecenas mollis est eu sodales mollis. Nulla facilisi. Suspendisse eros arcu, elementum sed sem eu, pharetra rhoncus odio. Proin nec tincidunt velit. Cras nisl augue, faucibus sed mauris in, vestibulum mollis nisl. Nam id libero ultrices, consequat ex vitae, convallis nulla.
+The opening "Musical Box" is a wonderful mini rock opera, with nursery rhyme influences mixing with bombastic keyboards and drums. It really is a true prog classic, and essential for anyone new to the genre wishing to find the essence of early 1970's prog
 
-Suspendisse lorem odio, blandit at nisl quis, hendrerit tempus tellus. Donec eget leo quis nisi vulputate consectetur. Praesent dignissim enim elit, congue luctus nisl cursus at. Sed rutrum molestie risus. Donec vulputate gravida accumsan. Vivamus tempus ullamcorper eleifend. Sed sagittis mi ut dolor tincidunt, ac rutrum nisi commodo.
+The gentle Phil Collins led song "For absent friends" provides a brief breathing space before the wonderfully heavy and menacing keyboard introduction to "The return of the giant hogweed". Genesis collective imagination runs riot on these showpiece tracks, creating sounds and structures which at the time of this album's release were unique.
 
-Fusce non elit in diam rutrum vestibulum. Donec vitae elementum erat. Praesent elementum eget justo at bibendum. Fusce interdum diam lorem, ut placerat elit pretium quis. Quisque eu urna at quam commodo sagittis. Etiam posuere convallis tincidunt. Phasellus vitae ligula neque. Vivamus a purus at dolor iaculis placerat. Curabitur convallis eu lacus congue sagittis.
+On side 2 of the LP, "Seven Stones" and "The fountain of Salmacis" both have strong Mellotron played by Tony Banks. "Seven stones" has one of the purest mellotron solos you're likely to hear, while "Fountain.." has an almost symphonic sound complementing a mythical story.
 
-Aliquam suscipit fermentum mauris a accumsan. In facilisis, mauris quis pulvinar tempus, turpis sapien sodales nibh, nec feugiat augue est quis nisi. Fusce eget odio feugiat, luctus quam et, dapibus nulla. Sed ornare lacus non libero lacinia pretium. In eu dui vitae purus euismod feugiat ac ac est. Morbi vitae pretium lorem, non eleifend felis. Nullam at massa feugiat, rutrum elit at, semper lacus. Etiam vel rutrum felis. Nullam quis auctor lorem, et tempor arcu.
+"Harold the barrel" is a brief but amusing interlude about a "Well know Bognor restaurant owner", who threatens to jump from a tall building. "Harlequin" is really the only superfluous track on the album, quaint but disposable.
+
+In all, one of the major albums in prog history, full of enterprise, imagination, and great music.
